--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
-@import './main.scss';
 @import './mixins.scss';
+@import './main.scss';
 @import './components/buttons.scss';
+@import './components/navbar.scss';
