--- a/frontend/reactproj/src/styles/variables.scss
+++ b/frontend/reactproj/src/styles/variables.scss
@@ -1,3 +1,6 @@
 //colors variables
 $primary-color: #00308F;
 $secondary-color:#00FFFF;
+
+$primary-color-lighter: #00308fa9;
+$secondary-color-lighter:#00ffffac;
