--- a/frontend/reactproj/src/styles/main.scss
+++ b/frontend/reactproj/src/styles/main.scss
@@ -6,21 +6,39 @@
 
 html{
     height: 100%;
+    width: 100%;
 }
 body{
+    position: relative;
     height: 100%;
+    width: 100%;
     background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .main-content{
-    border: 2px solid black;
-    height: 500px;
-    width: 1000px;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: max(60px, 8%) 92%;
+
+
+}
+.display-content{
+
+    height: 100%;
+}
+
+.tmp-content{
+
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    border-radius: 15px;
+    justify-content: center;
+    height: 100%;
+    button, a{
+        margin: 10px;
+    }
 }
