--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -3,3 +3,6 @@
 @import './main.scss';
 @import './components/buttons.scss';
 @import './components/navbar.scss';
+@import './components/countriesSelector.scss';
+@import './components/courses.scss';
+@import './components/courseItem.scss';
