--- a/frontend/reactproj/src/styles/variables.scss
+++ b/frontend/reactproj/src/styles/variables.scss
@@ -4,3 +4,6 @@ $secondary-color:#00FFFF;
 
 $primary-color-lighter: #00308fa9;
 $secondary-color-lighter:#00ffffac;
+
+$background-color: #f5f7f8;
+$search-bar-color: #c5d7fb;
