--- a/frontend/reactproj/src/styles/main.scss
+++ b/frontend/reactproj/src/styles/main.scss
@@ -12,9 +12,8 @@ body{
     position: relative;
     height: 100%;
     width: 100%;
-    background: white;
+    background: $background-color;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 .main-content{
