--- a/frontend/reactproj/src/styles/main.scss
+++ b/frontend/reactproj/src/styles/main.scss
@@ -41,4 +41,14 @@ body{
     button, a{
         margin: 10px;
     }
+
+.addusers{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    button, a{
+        margin: 10px;
+    }
+}
 }
