subtitles done +  database constraints

--- a/frontend/reactproj/src/styles/styles.scss
+++ b/frontend/reactproj/src/styles/styles.scss
@@ -21,4 +21,18 @@
     padding-bottom:20px;
 }
 
+.appBar2{
+    margin-top:20px;
+    border-radius:15px;
+    display:flex;
+    flex-direction:row;
+    row-gap:15px;
+    flex-wrap:wrap;
+    align-items:start; 
+    padding-top:20px;
+    padding-bottom:20px;
+    padding-left:70px;
+}
+
+
 
