admin cards for adding accounts done

--- a/frontend/reactproj/src/styles/main.scss
+++ b/frontend/reactproj/src/styles/main.scss
@@ -42,13 +42,18 @@ body{
         margin: 10px;
     }
 
-.addusers{
+.admin-card{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.admin-box{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
-    button, a{
-        margin: 10px;
-    }
+
 }
 }
