--- a/frontend/reactproj/src/styles/components/courses.scss
+++ b/frontend/reactproj/src/styles/components/courses.scss
@@ -42,10 +42,10 @@
     display: flex;
     flex-direction: row;
     align-items: start;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
     position: relative;
-
+    overflow: auto;
     height: 100%;
     &__none{
 
@@ -56,4 +56,15 @@
         color: grey;
         
     }
+}
+
+.pagi{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.right-side{
+
+    display: flex;
+    flex-direction: column;
 }
