done with currency and inst courses

--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import './components/countriesSelector.scss';
 @import './components/courses.scss';
 @import './components/courseItem.scss';
+@import './components/tooltip.scss';
