--- a/frontend/reactproj/src/styles/components/countriesSelector.scss
+++ b/frontend/reactproj/src/styles/components/countriesSelector.scss
@@ -8,8 +8,8 @@
 .country-selector{
     position: relative;
     margin: 0 10px 0 10px;
-    border: 1px solid black;
-    border-radius: 100%;
+    // border: 1px solid black;
+    // border-radius: 100%;
     width: 40px;
     height: 40px;
 
