--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import './components/courses.scss';
 @import './components/courseItem.scss';
 @import './components/tooltip.scss';
+@import './components/instructor.scss';
