login page + new nav bar

--- a/frontend/reactproj/src/styles/components/buttons.scss
+++ b/frontend/reactproj/src/styles/components/buttons.scss
@@ -1,5 +1,5 @@
 .primary-btn{
-    background: linear-gradient(to right , $primary-color, $secondary-color);
+    background:$primary-color;
     padding: 10px 20px 10px 20px !important;
     box-shadow: none !important;
 
