--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import './components/courseItem.scss';
 @import './components/tooltip.scss';
 @import './components/instructor.scss';
+@import './components/login-page.scss';
