--- a/frontend/reactproj/src/styles/mixins.scss
+++ b/frontend/reactproj/src/styles/mixins.scss
@@ -3,3 +3,9 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@mixin flex-center-all{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
