--- a/frontend/reactproj/src/styles/components/countriesSelector.scss
+++ b/frontend/reactproj/src/styles/components/countriesSelector.scss
@@ -10,8 +10,17 @@
     margin: 0 10px 0 10px;
     // border: 1px solid black;
     // border-radius: 100%;
-    width: 40px;
+    width: 60px;
     height: 40px;
 
     overflow: hidden;
+
+    &__option{
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $primary-color;
+        cursor: pointer;
+    }
 }
