--- a/frontend/reactproj/src/styles/components/countriesSelector.scss
+++ b/frontend/reactproj/src/styles/components/countriesSelector.scss
@@ -20,7 +20,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: $primary-color;
+        color: var(--primary-color);
         cursor: pointer;
     }
 }
