--- a/frontend/reactproj/src/styles/components/courses.scss
+++ b/frontend/reactproj/src/styles/components/courses.scss
@@ -75,7 +75,7 @@
         width: 100%;
         margin-bottom:30px;
         &__title{
-            color: $primary-color;
+            color: var(--primary-color);
             font-weight: bolder;
             font-size: 20px;
         }
