--- a/frontend/reactproj/src/styles/variables.scss
+++ b/frontend/reactproj/src/styles/variables.scss
@@ -1,9 +1,22 @@
 //colors variables
-$primary-color: #00308F;
-$secondary-color:#00FFFF;
+$primary-color: #D80621;
+$secondary-color:#00308f;
 
 $primary-color-lighter: #00308fa9;
-$secondary-color-lighter:#00ffffac;
+
+
+// $primary-color-lighter: #00308fa9;
+// $secondary-color-lighter:#00ffffac;
+
+$primary-color-lighter: #e54459;
+$secondary-color-lighter:#00308fa9;
+
+// $secondary-color-lighter:#00ffffac;
 
 $background-color: #f5f7f8;
-$search-bar-color: #c5d7fb;
+// $background-color-dark: #0f0f0f;
+// $search-bar-color: #c5d7fb;
+$search-bar-color: #d8062234;
+
+$font-color: black;
+$cool-grey: rgb(239, 243, 244);
