--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -12,3 +12,6 @@
 @import './components/instructorDB.scss';
 @import './components/createQuiz.scss';
 @import './components/instructor-profile.scss';
+@import './components/instructor-courses.scss';
+@import './components/instructorCourse-drawer.scss';
+@import './components/contract.scss';
