--- a/frontend/reactproj/src/styles/components/buttons.scss
+++ b/frontend/reactproj/src/styles/components/buttons.scss
@@ -1,5 +1,5 @@
 .primary-btn{
-    background:var(--primary-color )!important;
+    // background:var(--primary-color )!important;
     padding: 10px 20px 10px 20px !important;
     box-shadow: none !important;
 
