--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -9,3 +9,6 @@
 @import './components/tooltip.scss';
 @import './components/instructor.scss';
 @import './components/login-page.scss';
+@import './components/forgotPassword.scss';
+@import './components/changePassword.scss';
+@import './components/watchVideo.scss';
