--- a/frontend/reactproj/src/styles/components/instructorCourse-drawer.scss
+++ b/frontend/reactproj/src/styles/components/instructorCourse-drawer.scss
@@ -136,7 +136,7 @@
     position: absolute;
     bottom:5px;
     right:5px;
-    width:100%;
+    width:fit-content;
     display:flex;
     justify-content:flex-end;
 }
