--- a/frontend/reactproj/src/styles/components/login-page.scss
+++ b/frontend/reactproj/src/styles/components/login-page.scss
@@ -15,7 +15,9 @@
             height: 100%;
             width: 80%;
             // background: linear-gradient(45deg, var(--primary-color-lighter), var(--secondary-color-lighter));
-            background: linear-gradient( 90deg, #3F0D12, #A71D31);
+            // background: linear-gradient( 90deg, #3F0D12, #A71D31);
+            background: linear-gradient( 90deg, var(--primary-color), var(--primary-color));
+
 
             color:white;
             font-size: 50px;
@@ -43,7 +45,7 @@
             &__text{
                 @include flex-center-all;
                 // background: linear-gradient(45deg, var(--primary-color-lighter), var(--secondary-color-lighter));
-                background: linear-gradient( 90deg, #3F0D12, #A71D31);
+                background: linear-gradient( 90deg, var(--primary-color), var(--primary-color));
 
                 font-size: 30px;
                 font-weight: bolder;
