--- a/frontend/reactproj/src/styles/components/createQuiz.scss
+++ b/frontend/reactproj/src/styles/components/createQuiz.scss
@@ -71,7 +71,8 @@
     }
     .selected-q{
         // background: var(--search-bar-color) ;
-        background: linear-gradient( 90deg, #3F0D12, #A71D31);
+        // background: linear-gradient( 90deg, #3F0D12, #A71D31);
+        background: var(--primary-color);
         color: white;
 
     }
