changed some styles

--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -15,3 +15,4 @@
 @import './components/instructor-courses.scss';
 @import './components/instructorCourse-drawer.scss';
 @import './components/contract.scss';
+@import './components/course-user.scss';
