--- a/frontend/reactproj/src/styles/traineeExercise.scss
+++ b/frontend/reactproj/src/styles/traineeExercise.scss
@@ -1,92 +1,114 @@
 .App {
-    text-align: center;
-  }
-  
-  .question-card {
-    display:flex;
-    flex-direction:column;
-    row-gap: 10px;
-    margin: 0 auto;
+  text-align: center;
 
-    width: 80%; 
-    height: auto;
-    background-color: grey;
-    padding: 20px;
-    border-radius: 16px;
-    color: white;
-    box-shadow: rgba(78, 78, 83, 0.25) 0px 30px 60px -12px,
-      rgba(218, 8, 8, 0.3) 0px 18px 36px -18px;
-  }
-  
-  ul {
-    list-style: none;
-    display:flex;
-    flex-direction: column;
-    row-gap:5px;
-  }
-  .questions_li{
-    margin-top: 8px;
-    background-color: darkgray;
-    padding: 16px;
-    border: 3px solid white;
-    border-radius: 20px;
-    font-size: 20px;
-  }
+  // background: var(--cool-grey);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.currentqheader{
+  color: var(--primary-color);
 
-  .questions_li:hover{
-    background-color: #A30000;
-    cursor:pointer;
-  }
+  display: flex;
+  justify-content: flex-start;
+}
+.question-card {
   
-  /*li {
-    margin-top: 8px;
-    background-color: darkgray;
-    padding: 16px;
-    border: 3px solid white;
-    border-radius: 20px;
-    font-size: 20px;
-    
-  }
-  li:hover{
-    background-color: #A30000;
-    cursor:pointer;
-  }*/
-   
-  .question-text {
-    color: black;
-    font-size: 24px;
-  }
+ 
+  display:flex;
+  flex-direction:column;
+  row-gap: 10px;
+  margin: 0 auto;
+
+  width: 60%; 
+
+  height: auto;
+  background: white;
+  border: 2px solid var(--primary-color);
+  padding: 5vw;
+
+
+  border-radius: 10px;
+  color: black;
+  // box-shadow: rgba(78, 78, 83, 0.25) 0px 30px 60px -12px,
+  //   rgba(218, 8, 8, 0.3) 0px 18px 36px -18px;
+}
+
+ul {
+  list-style: none;
+  display:flex;
+  flex-direction: column;
+  row-gap:5px;
+}
+.questions_li{
+  transition: all 0.3s;
+  margin-top: 8px;
+  background-color: transparent;
+  padding: 16px;
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.questions_li:hover{
+  background-color: var(--primary-color);
+  color: white;
+  cursor:pointer;
+}
+
+/*li {
+  margin-top: 8px;
+  background-color: darkgray;
+  padding: 16px;
+  border: 3px solid white;
+  border-radius: 20px;
+  font-size: 20px;
   
-  .final-results {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 20px;
-    margin: 0 auto;
-    width: 50%;
-    height: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    background-color: gray;
-    padding: 16px;
-    border-radius: 16px;
-    color: white;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-  }
-  
-  button {
-    background-color: #A30000;
-    width:200px;
-    border: none;
-    color: white;
-    padding: 16px 24px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 24px;
-  }
-  button:hover{
-    cursor: pointer;
-  }
+}
+li:hover{
+  background-color: #A30000;
+  cursor:pointer;
+}*/
+ 
+.question-text {
+  color: black;
+  font-weight: lighter;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.final-results {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  row-gap: 20px;
+  margin: 0 auto;
+  width: 50%;
+  height: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: var(--cool-grey);
+  padding: 16px;
+  border-radius: 10px;
+  color: black;
+  // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+  //   rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
+button {
+  background-color: var(--primary-color);
+  // width:200px;
+  border: none;
+  color: white;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 10px;
+}
+button:hover{
+  cursor: pointer;
+}
