--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -15,4 +15,6 @@
 @import './components/instructor-courses.scss';
 @import './components/instructorCourse-drawer.scss';
 @import './components/contract.scss';
+@import './components/traineeViewMyCourse.scss';
 @import './components/course-user.scss';
+@import './components/traineeExercise.scss';
