--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -16,6 +16,7 @@
 @import './components/instructorCourse-drawer.scss';
 @import './components/contract.scss';
 @import './components/traineeViewMyCourse.scss';
+@import './components/traineeCourseDetails.scss';
 @import './components/course-user.scss';
 @import './components/traineeExercise.scss';
 @import './components/forgotPassword.scss';
