--- a/frontend/reactproj/src/styles/components/instructor-profile.scss
+++ b/frontend/reactproj/src/styles/components/instructor-profile.scss
@@ -8,6 +8,8 @@
             &__header{
                 font-size: 30px;
                 font-weight: bold;
+                display: flex;
+                align-items: center;
             }
             &__comments{
                 padding: 20px;
