--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -22,3 +22,4 @@
 @import './components/forgotPassword.scss';
 @import './components/changePassword.scss';
 @import './components/watchVideo.scss';
+@import './components/homeLand.scss';
