--- a/frontend/reactproj/src/styles/variables.scss
+++ b/frontend/reactproj/src/styles/variables.scss
@@ -1,6 +1,7 @@
 //colors variables
 $primary-color: #D80621;
-$secondary-color:#00308f;
+$secondary-color:#000066;
+$primary-color-linear: #46000a;
 
 $primary-color-lighter: #00308fa9;
 
