done with all of MS3 + loading page

--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -23,3 +23,5 @@
 @import './components/changePassword.scss';
 @import './components/watchVideo.scss';
 @import './components/homeLand.scss';
+@import './components/user-reports.scss';
+@import './components/loading.scss';
