--- a/frontend/reactproj/src/styles/components/navbar.scss
+++ b/frontend/reactproj/src/styles/components/navbar.scss
@@ -1,5 +1,5 @@
 .navbar{
-    // border-bottom: 1px solid black;
+    border-bottom: 0.1px solid var(--primary-color);
     height: 100%;
     @include flex-h-center-spaceB;
 
