--- a/frontend/reactproj/src/styles/components/course-user.scss
+++ b/frontend/reactproj/src/styles/components/course-user.scss
@@ -94,7 +94,9 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            margin-left:30px;
+            margin-left:25px;
+            padding-top:10px;
+            padding-bottom:5px;
 
             &__title{
                 color: var(--primary-color);
