--- a/frontend/reactproj/src/styles/components/homeLand.scss
+++ b/frontend/reactproj/src/styles/components/homeLand.scss
@@ -140,9 +140,12 @@
             column-gap: 25px;
             justify-content: flex-start;
             align-items:center;
-            padding: 20px;
+            padding-left:7px;
+            padding-right:13px;
+            padding-top:10px;
+            padding-bottom:10px;
             height: fit-content;
-            width:1055px;
+            width:1060px;
             background-color: white;
             overflow-x: hidden;
             scroll-behavior: smooth;
@@ -151,32 +154,33 @@
             &__popularDiv{
                 display:flex;
                 flex-direction:column;
-                width:240px;
+                min-width:240px;
                 row-gap:7px;
                 background-color: #F8F8FF;
-                padding-left: 5px;
-                padding-right: 5px;
-                padding-bottom: 5px;
-                padding-top: 5px;
+                padding: 7px;
                 border-radius: 15px;
 
                 &__image{
                     margin-bottom: 10px;
-                    width:222px;
+                    //width:222px;
                     height:140px;
                     border:solid;
                     border-color:#F8F8FF;
                     border-width:thin;
                     background-color: #F8F8FF;
                     border-radius: 15px;
+                    aspect-ratio: 1/1;
+                    margin-left:40px;
                 }
                 
                 &__title{
                     //line-height:1.5px;
                     font-size:14px;
                     font-weight:600;
+                    line-height: 1.3;
                     height: fit-content;
                     background-color: #F8F8FF;
+                    color:#383232;
 
                 }
     
@@ -193,6 +197,7 @@
                     font-weight:600;
                     height: fit-content;
                     background-color: #F8F8FF;
+                    color:#383232;
                 }
 
             }
