--- a/frontend/reactproj/src/styles/styles.scss
+++ b/frontend/reactproj/src/styles/styles.scss
@@ -39,6 +39,7 @@
     margin-top:30px;
     border-radius:15px;
     display:flex;
+    max-width:90%;
     flex-direction:row;
     row-gap:15px;
     flex-wrap:wrap;
