--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -23,3 +23,5 @@
 @import './components/changePassword.scss';
 @import './components/watchVideo.scss';
 @import './components/homeLand.scss';
+@import './components/signup.scss';
+@import './components/takeNotes.scss';
