--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -25,3 +25,5 @@
 @import './components/homeLand.scss';
 @import './components/user-reports.scss';
 @import './components/loading.scss';
+@import './components/addCourse.scss';
+@import './components/signUp.scss';
