--- a/frontend/reactproj/src/styles/variables.scss
+++ b/frontend/reactproj/src/styles/variables.scss
@@ -1,7 +1,10 @@
 //colors variables
 $primary-color: #D80621;
+//rgb(216, 6, 33)
 $secondary-color:#000066;
+//rgb(0, 0, 102)
 $primary-color-linear: #46000a;
+//rgb(70, 0, 10)
 
 $primary-color-lighter: #00308fa9;
 
