--- a/frontend/reactproj/src/styles/main.scss
+++ b/frontend/reactproj/src/styles/main.scss
@@ -14,6 +14,7 @@ body{
     width: 100%;
     background: transparent;
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
 }
 
 .main-content{
