added notification System + loading pages

--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -27,3 +27,5 @@
 @import './components/loading.scss';
 @import './components/addCourse.scss';
 @import './components/signUp.scss';
+@import './components/sidenav.scss';
+@import './components/adminDB.scss';
