--- a/frontend/reactproj/src/styles/components/homeLand.scss
+++ b/frontend/reactproj/src/styles/components/homeLand.scss
@@ -155,6 +155,7 @@
                 display:flex;
                 flex-direction:column;
                 min-width:190px;
+                max-width:190px;
                 row-gap:7px;
                 background-color: #F8F8FF;
                 padding: 7px;
