--- a/frontend/reactproj/src/styles/index.scss
+++ b/frontend/reactproj/src/styles/index.scss
@@ -31,4 +31,4 @@
 @import './components/adminDB.scss';
 @import './components/signup.scss';
 @import './components/takeNotes.scss';
-
+@import './components/newMyCourse.scss';
