--- a/frontend/reactproj/src/styles/components/homeLand.scss
+++ b/frontend/reactproj/src/styles/components/homeLand.scss
@@ -312,94 +312,97 @@
 }
 
 
-    .section_2{
-        padding-top:30px;
-        display:flex;
-        flex-direction: column;
-        row-gap: 30px;
-        padding-left: 5vw;
-        padding-right: 5vw;
+.section_3{
+    padding-top:30px;
+    display:flex;
+    flex-direction: column;
+    row-gap: 30px;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    height: fit-content;
+    padding-bottom: 40px;
+    width:300px;
+    &__allPopular{
+
+
+        display: flex;
+        flex-direction: row;
+        column-gap: 23px;
+        justify-content: flex-start;
+        align-items:center;
+        padding-left:3px;
+        padding-right:0px;
+        padding-top:6px;
+        padding-bottom:6px;
         height: fit-content;
-        padding-bottom: 40px;
+        width:100%;
+        background-color: white;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+        
 
-        &__allPopular{
-            display: flex;
-            flex-direction: row;
-            column-gap: 23px;
-            justify-content: flex-start;
-            align-items:center;
-            padding-left:3px;
-            padding-right:0px;
-            padding-top:6px;
-            padding-bottom:6px;
-            height: fit-content;
-            width:76.7vw;
-            background-color: white;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-           
+        &__popularDiv{
+            display:flex;
+            flex-direction:column;
+            min-width:190px;
+            max-width:190px;
+            row-gap:7px;
+            background-color: #F8F8FF;
+            padding: 7px;
+            border-radius: 15px;
 
-            &__popularDiv{
-                display:flex;
-                flex-direction:column;
-                min-width:190px;
-                max-width:190px;
-                row-gap:7px;
+            &__image{
+                margin-bottom: 10px;
+                //width:222px;
+                height:125px;
+                border:solid;
+                border-color:#F8F8FF;
+                border-width:thin;
                 background-color: #F8F8FF;
-                padding: 7px;
                 border-radius: 15px;
-
-                &__image{
-                    margin-bottom: 10px;
-                    //width:222px;
-                    height:125px;
-                    border:solid;
-                    border-color:#F8F8FF;
-                    border-width:thin;
-                    background-color: #F8F8FF;
-                    border-radius: 15px;
-                    aspect-ratio: 1/1;
-                    margin-left:24px;
-                }
-                
-                &__title{
-                    //line-height:1.5px;
-                    font-size:13px;
-                    font-weight:600;
-                    line-height: 1.3;
-                    height: fit-content;
-                    background-color: #F8F8FF;
-                    color:#383232;
-
-                }
-    
-                &__instructor{
-                    font-size:12px;
-                    font-weight:100;
-                    height: fit-content;
-                    color:var(--primary-color);
-                    background-color: #F8F8FF;
-                }
-    
-                &__price{
-                    font-size:13px;
-                    font-weight:600;
-                    height: fit-content;
-                    background-color: #F8F8FF;
-                    color:#383232;
-                }
-
+                aspect-ratio: 1/1;
+                margin-left:24px;
             }
             
+            &__title{
+                //line-height:1.5px;
+                font-size:13px;
+                font-weight:600;
+                line-height: 1.3;
+                height: fit-content;
+                background-color: #F8F8FF;
+                color:#383232;
+
+            }
+
+            &__instructor{
+                font-size:12px;
+                font-weight:100;
+                height: fit-content;
+                color:var(--primary-color);
+                background-color: #F8F8FF;
+            }
+
+            &__price{
+                font-size:13px;
+                font-weight:600;
+                height: fit-content;
+                background-color: #F8F8FF;
+                color:#383232;
+            }
+
         }
         
     }
+    
 }
+
 
 .appBarX{
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
+   padding-right: 20px;
    border-radius: 15px;
 }
 
@@ -428,6 +431,8 @@
     border-radius: 50%;
     width:35px;
     height:60px;
+    padding-right:5px;
+
 }
 
 .arrowLeft:hover,.arrowRight:hover{
