--- a/frontend/reactproj/src/styles/components/takeNotes.scss
+++ b/frontend/reactproj/src/styles/components/takeNotes.scss
@@ -6,10 +6,11 @@
 
 /* GLOBAL STYLES */
 
-body,
+//removed body from this selector. caused many bugs.
+//commented ths font'family as we got a default font family.
 .takeNotes {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    //     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     width: 100%;
     height: 100vh;
     overflow: hidden;
