--- a/frontend/reactproj/src/styles/components/takeNotes.scss
+++ b/frontend/reactproj/src/styles/components/takeNotes.scss
@@ -12,7 +12,7 @@
     // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     //     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     font-size: 16px;
   //background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
@@ -42,8 +42,8 @@
 
 .notes-sidebar {
   width: 30%;
-  height: 100vh;
-  border-right: 1px solid #ddd;
+  // height: 100vh;
+
   overflow-x: hidden;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .notes-sidebar-notes {
-  height: calc(100vh - 148px);
+  // height: calc(100vh - 148px);
   overflow-y: scroll;
 }
 
