--- a/frontend/reactproj/src/styles/components/takeNotes.scss
+++ b/frontend/reactproj/src/styles/components/takeNotes.scss
@@ -8,14 +8,14 @@
 
 //removed body from this selector. caused many bugs.
 //commented ths font'family as we got a default font family.
+body,
 .takeNotes {
-    // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    //     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
     width: 100%;
     height: 100%;
-    overflow: hidden;
     font-size: 16px;
-  //background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
+
+
 }
 
 .sidebarBtn {
