--- a/frontend/reactproj/src/styles/components/course-user.scss
+++ b/frontend/reactproj/src/styles/components/course-user.scss
@@ -1,20 +1,20 @@
 .user-course{
     position: relative;
 
-    padding-left: 70px;
-    padding-right: 70px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-
+    // padding-left: 70px;
+    // padding-right: 70px;
+    // padding-top: 50px;
+    // padding-bottom: 50px;
+    padding: 10px;
 
     border-radius: 10px;
-
-    background-color:var(--cool-grey);
+    // border: 1px solid var(--primary-color);
+    // background-color:var(--cool-grey);
     height: fit-content;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-left: 2%;
+    margin-right: 2%;
+    // margin-top: 2%;
+    // margin-bottom: 2%;
 
 
 
@@ -62,6 +62,7 @@
         display: flex;
         height: fit-content;
         background: rgb(220, 226, 228);
+        background: var(--cool-grey);
 
         // background-color: lighten(#D80621, 50);
 
